# SIM-studentcup2025

./: .gitignore  README.md  README_KABETANI_YUSEI.md  env.example  pyproject.toml
inputs/: fiction_stories_only.tsv  fiction_stories_test.tsv  sample_submit.csv
src/comp/: config.py  gemini-api-pred.py  merge.py
submission/: sub2_gemini25flash.csv  sub4_opus4-5.csv  sub5_gemini3pro.csv  sub6_gemini2-5flash-preview.csv  sub7_ensamble.csv  submission1_gemini3flash.csv  submission3_gemini3flash_temp0.csv
